[metadata]
    name = pyadf435x
    author = Martin Homuth-Rosemann
    author_email = Ho-Ro@users.noreply.github.com
    url= https://github.com/Ho-Ro/pyadf435x
    description = A package for automating AD4350/1 boards
    platforms = all
    license = GPLv3
    version = attr: adf435x.VERSION


[options]
    packages = find:
    scripts = adf435xctl


[options.data_files]
    bin = adf435xinit
    share/doc/pyadf435x =
        LICENSE
        README.md
        Changelog
    share/doc/pyadf435x/images =
        images/ADF4351_Pinout.png
        images/ADF435X_EVAL_Board.jpg
    share/doc/pyadf435x/examples =
        examples/random_hop.py
        examples/sweep.py
        examples/mux_stat.py
        examples/set_cw.py
        examples/clear_default.py
        examples/store_default.py
    share/pyadf435x =
        fx2adf435xfw.ihx
        fx2adf435xfw.iic
        fx2adf435xfw_ex.ihx
        fx2adf435xfw_ex.iic
    /etc/udev/rules.d = contrib/60-adf4xxx.rules


[sdist_dsc]
    compat = 10
