[metadata]
    name = adf435x
    author = Martin Homuth-Rosemann
    author_email = Ho-Ro@users.noreply.github.com
    url= https://github.com/Ho-Ro/adf435x
    description = A package for automating AD4350/1 boards
    long_description = Calculate the registers of the ADF435x according to user input of frequncy etc.
    platforms = all
    license = GPLv3
    version = attr: adf435x.VERSION


[options]
    packages = find:
    scripts = adf435xctl


[options.data_files]
    bin =
        adf435xinit
        adf435xgui
    share/doc/adf435x =
        LICENSE
        README.md
        Changelog
    share/doc/adf435x/images =
        images/ADF4351_Pinout.png
        images/ADF435X_EVAL_Board.jpg
    share/doc/adf435x/examples =
        examples/random_hop.py
        examples/sweep.py
        examples/mux_stat.py
        examples/set_cw.py
        examples/clear_startup.py
        examples/store_startup.py
        examples/get_eeprom.py
    share/adf435x =
        fx2adf435xfw.ihx
        fx2adf435xfw.iic
    /etc/udev/rules.d = contrib/60-adf4xxx.rules


[sdist_dsc]
    compat = 11
