[metadata]
    name = adf435x
    author = Martin Homuth-Rosemann
    author_email = Ho-Ro@users.noreply.github.com
    url= https://github.com/Ho-Ro/adf435x
    description = A package for automating AD4350/1 boards
    long_description = Calculate the registers of the ADF435x according to user input of frequncy etc.
    platforms = all
    license = GPLv3
    version = attr: adf435x.VERSION


[options]
    packages = find:
    scripts = adf435xctl


[options.data_files]
    bin =
        adf435xinit
        adf435xgui
        examples/adf4351/adf4351
    share/doc/adf435x =
        LICENSE
        README.md
        Changelog
    share/doc/adf435x/images =
        images/ADF4351_Pinout.png
        images/ADF435X_EVAL_Board.jpg
    share/doc/adf435x/examples =
        examples/random_hop.py
        examples/sweep.py
        examples/mux_stat.py
        examples/set_cw.py
        examples/clear_startup.py
        examples/set_startup-stand-alone.py
        examples/set_startup-always.py
        examples/get_ee_reg_set.py
        examples/get_xram_reg_set.py
        examples/read_eeprom.py
        examples/get_device_info.py
    share/doc/adf435x/examples/set_100 =
        examples/set_100/Makefile
        examples/set_100/main.cpp
    share/doc/adf435x/examples/adf4351 =
        examples/adf4351/Makefile
        examples/adf4351/main.cpp
        examples/adf4351/ADF4351.cpp
        examples/adf4351/ADF4351.h
        examples/adf4351/USB.cpp
        examples/adf4351/USB.h
    share/adf435x =
        fx2adf435xfw.ihx
        fx2adf435xfw.iic
    /etc/udev/rules.d = contrib/60-adf4xxx.rules


[sdist_dsc]
    compat = 11
